@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11167] "Hvad bruges src/dk/dbc/opensearch/components/datadock/config.xml til?"
    - bug [11165] "Bør Pair.java ikke hedde IPair.java for at leve op til vores måde at definere interfaces på?"
    - bug [11166] "ThrownInfo.java bruges ikke og kan slettes"
    - bug [10734] "XMLDCHarvesterTest skal refaktoreres"
